--- a/week-03-exercise-01/index.html
+++ b/week-03-exercise-01/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Your Name</title>
+    <title>Alesha Sulahry</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <div class="card">
-      <h1>Your Name</h1>
-      <p>A short bio about yourself — two to three sentences.</p>
+      <h1>Alesha Sulahry</h1>
+      <p>I love traveling and capturing moments through photography, especially when I get to spend time with friends in new places. In my quieter moments, I enjoy baking, journaling, and any little project that lets me unwind and be creative.</p>
     </div>
   </body>
 </html>
