--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ Remember: You must create subfolders for each piece of coursework as the semeste
                         <a href="example-exercise-00/">Example Exercise 00</a>
                     </li>
                     <li><a href="week-03-exercise-01/index.html">Exercise 01</a></li>
-                    <li><a href="">Exercise 02</a></li>
+                    <li><a href="week-04-excercise-01/">Exercise 01</a></li>
                     <li><a href="">Exercise 03</a></li>
                 </ul>
             </section>
