--- a/week-04-excercise-01/week-04-exercise-01-template/index.html
+++ b/week-04-excercise-01/week-04-exercise-01-template/index.html
@@ -27,15 +27,11 @@
         </div>
         <h2>What I "Vandalized- TTU Edition"</h2>
         <p>
-            I changed the main headline from "Ready to become a Red Raider?" to "Ready to become the Funniest Student Ever?" I also changed the subheading from "Start your journey to Possible right here." to "End your journey to Possible right here.". For Styles, I made two changes. FIrstly, I changed the main heading color from white to a pretty magenta. I also added a text shadow, changing the text shadow of the main heading from black, to a light pink.
+            I changed the main headline from "Ready to become a Red Raider?" to "Ready to become the Funniest Student Ever?" I also changed the subheading from "Start your journey to Possible right here." to "End your journey to Possible right here.". For Styles, I made two changes. Firstly, I changed the main heading color from white to a pretty magenta. I also added a text shadow, changing the text shadow of the main heading from black, to a light pink. 
         <ul>
-            <li>What text did you edit?</li>
-            <li>What CSS properties did you modify?</li>
-            <li>What made your edits interesting or amusing?</li>
-            <li>Did you understand why some changes worked and some didn't?</li>
-            <li>Why did you choose the changes you did?</li>
-            <li>Were you able to understand how the HTML and CSS worked together to make the changes you made?</li>
-            <li>Do you think you have a better sense of how dev tools can be used while crafting your own webpages?</li>
+            <li>
+I chose the changes that I did because I wanted to see how much of a change my little tweaks could add to the website. It made a huge difference, and made me realize how important editing is. I was able to understand how HTML and CSS interlink through changes I made. I do have a better sense of how dev tools can be used while crafting my own webpages. 
+            </li>
         </ul>
         </p>
     </main>
