--- a/week-04-excercise-01/week-04-exercise-01-template/index.html
+++ b/week-04-excercise-01/week-04-exercise-01-template/index.html
@@ -23,7 +23,7 @@
                 Example: If your screenshot is named "apple-dot-com-but-with-papyrus-font.png", change the line to:
                 src="./apple-dot-com-but-with-papyrus-font.png"
             -->
-            <img src="ttu.edu-vandalism-screenshot.png"Screenshot of the webpage I vandalized" />
+            <img src="images/ttu.edu-vandalism-screenshot.png"Screenshot of the webpage I vandalized" />
         </div>
         <h2>What I "Vandalized- TTU Edition"</h2>
         <p>
